--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,3 +2,24 @@
  *= require_tree .
  *= require_self
  */
+@import "application.tailwind";
+@import "variables";
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body {
+  color: $primary;
+}
+/* Colors ************************************ */
+
+// Background Colors
+.bg-primary { background-color:$primary; }
+.bg-purple { background-color:$purple; }
+.bg-secondary { background-color:$secondary; }
+
+// Text Colors
+.text-primary { color:$primary; }
+.text-secondary { color:$secondary; }
