--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <div>
-  <h1 class="font-bold text-4xl"><%= t('general.welcome') %></h1>
+  <h1 class="text-primary"><%= t('general.welcome') %></h1>
 </div>
