--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,5 +1,6 @@
 /* Colors **************** */
 $purple: #7367f0;
+$purple-dark: #380a54;
 $primary: #5e5873;
 $secondary: #6e6b7b;
 /* ************ End Colors */
