--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,8 +18,11 @@ body {
 // Background Colors
 .bg-primary { background-color:$primary; }
 .bg-purple { background-color:$purple; }
+.bg-purple-dark { background-color:$purple-dark; }
 .bg-secondary { background-color:$secondary; }
 
 // Text Colors
 .text-primary { color:$primary; }
 .text-secondary { color:$secondary; }
+
+// Hover
