--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,8 +16,8 @@
         </button>
       </div>
       <div class="flex-shrink-0 flex items-start">
-        <img class="block lg:hidden h-8 w-auto" src="<%= asset_path("logo.png") %>" alt="Workflow">
-        <img class="hidden lg:block h-8 w-auto" src="<%= asset_path("logo.png") %>" alt="Workflow">
+        <img class="block lg:hidden h-8 w-auto" src="<%= asset_path("logo.png") %>" alt="logo">
+        <img class="hidden lg:block h-8 w-auto" src="<%= asset_path("logo.png") %>" alt="logo">
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">&#43;</a>
@@ -64,7 +64,9 @@
             <!-- Active: "bg-gray-100", Not Active: "" -->
             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
             <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
-            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+            <span href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">
+              <%= link_to "Sign out", destroy_user_session_path, class: '', method: :delete if signed_in? %>
+            </span>
           </div>
         </div>
       </div>
