--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
   <header>
-    <%= render 'shared/header' %>
+    <%= render 'shared/header' if signed_in? %>
   </header>
   <main class="container mx-auto mt-2">
     <p class="notice"><%= notice %></p>
