--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,97 @@
-<h2>Sign up</h2>
+<div class="flex justify-between">
+  <div class="">
+    <%= image_tag('register.png', size:'744x544') %>
+  </div>
+  <div class="absolute top-0 right-0 ">
+    <div class="bg-white text-secondary">
+      <div class="rounded-t px-4 py-6">
+        <div class="mb-1">
+          <div class="text-primary">
+            <%= image_tag('logo_purple.svg', size:'319x83') %>
+            <h2><%= t('devise.registrations.your_profits_start_today') %></h2>
+            <p class="text-sm mt-1"><%= t('devise.registrations.register') %></p>
+          </div>
+        </div>
+      </div>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "users/shared/error_messages", resource: resource %>
+      <div class="flex-auto px-4 py-10 pt-0">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "users/shared/error_messages", resource: resource %>
+          <div class="relative w-full mb-3">
+            <label class="block px-1 text-gray-700 text-xs font-bold mb-2" for="grid-password"><%= f.label :email %></label>
+            <%= f.email_field :email, placeholder: :email, autofocus: true, autocomplete: "email", style: "transition: all 0.15s ease 0s;",
+                              class: "px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded
+                                       text-sm shadow focus:outline-none focus:shadow-outline w-full"
+            %>
+          </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <div class="relative w-full mb-3">
+            <div class="flex justify-between">
+              <label class="text-gray-700 text-xs font-bold px-1" for="grid-password"><%= f.label :password %></label>
+              <label class="mb-2"><%= render "users/shared/links" %></label>
+            </div>
+            <%= f.password_field :password, autocomplete: "current-password",
+                                 placeholder: '⚉ ⚉ ⚉ ⚉ ⚉ ⚉ ⚉ ⚉',
+                                 style: "transition: all 0.15s ease 0s;",
+                                 class:"px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded
+                                          text-sm shadow focus:outline-none focus:shadow-outline w-full"
+            %>
+
+            <div class="flex justify-between">
+              <label class="text-gray-700 text-xs font-bold mb-2 px-1" for="grid-password"><%= f.label :password_confirmation %></label>
+              <label class="mb-2"><%= render "users/shared/links" %></label>
+            </div>
+            <div class="field">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "new-password",
+                                   placeholder: '⚉ ⚉ ⚉ ⚉ ⚉ ⚉ ⚉ ⚉',
+                                   style: "transition: all 0.15s ease 0s;",
+                                   class:"px-3 py-3 placeholder-gray-400 text-gray-700 bg-white rounded
+                                          text-sm shadow focus:outline-none focus:shadow-outline w-full"
+              %>
+            </div>
+
+            <div>
+              <% if devise_mapping.rememberable? %>
+                <div class="field mt-6">
+                  <%= f.check_box :remember_me %>
+                  <%= f.label :remember_me %>
+                </div>
+              <% end %>
+            </div>
+
+            <div class="text-center mt-6">
+              <button style="transition: all 0.15s ease 0s;"
+                      class="bg-purple text-white active:bg-gray-700 text-sm font-bold px-6 py-3
+                              rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
+              >
+                <%= f.submit "Login" %>
+              </button>
+
+            </div>
+          </div>
+        <% end %>
+
+        <div>
+          <div class="pl-6 pt-0 mt-2">
+            <small><%= t('devise.sessions.new_here') %></small>
+            <small class="ml-8 text-right"><%= render "users/shared/link_sign_up" %></small>
+          </div>
+
+          <div class="flex justify-center mt-0">
+            <small class="text-center"><%= t('or') %></small>
+          </div>
+
+          <div class="text-center mt-2">
+            <button class="bg-red-600 text-white active:bg-gray-700 text-sm font-bold px-6
+                                    py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full"
+            >
+              <%= link_to t('devise.sessions.login_with_google'), root_path %>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "users/shared/links" %>
+</div>
