--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -3,8 +3,9 @@
     <%= image_tag('register.png', size:'744x544') %>
   </div>
   <div class="absolute top-0 right-0 ">
-    <div class="bg-white text-secondary">
+    <div class="bg-white text-secondary border-gray-300 border-x-1">
       <div class="rounded-t px-4 py-6">
+
         <div class="mb-1">
           <div class="text-primary">
             <%= image_tag('logo_purple.svg', size:'319x83') %>
