--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,4 +1,2 @@
-<div>
-  <h1 class="font-bold text-4xl">Admin::Users#edit</h1>
-  <p>Find me in app/views/admin/users/edit.html.erb</p>
-</div>
+<h1>EDIT</h1>
+<%= render 'admin/users/form', user: @user %>
